--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,15 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/saas-boilerplate"
 NEXT_PUBLIC_STACK_PROJECT_ID=""
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=""
 STACK_SECRET_SERVER_KEY=""
+
+# Sentry
+SENTRY_ORG=""
+SENTRY_PROJECT=""
+
+# Resend
+RESEND_API_KEY=""
+RESEND_AUDIENCE_ID=""
+
+# PostHog
+NEXT_PUBLIC_POSTHOG_HOST=""
+NEXT_PUBLIC_POSTHOG_KEY=""
