--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-email/components": "^0.0.31",
+    "@sentry/nextjs": "^8",
     "@stackframe/stack": "^2.6.39",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -48,6 +50,8 @@
     "posthog-node": "^4.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email": "^3.0.4",
+    "resend": "^4.0.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
