--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.cjs",
     "check": "next lint && tsc --noEmit",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
@@ -46,6 +47,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.469.0",
     "next": "^15.0.1",
+    "next-sitemap": "^4.2.3",
     "posthog-js": "^1.203.1",
     "posthog-node": "^4.3.2",
     "react": "^18.3.1",
