feat: readme setup include required env

--- a/.env.example
+++ b/.env.example
@@ -9,21 +9,21 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-# Prisma
+# Prisma (Required)
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/saas-boilerplate"
 
-# Stack
+# Stack Auth (Required)
 # https://docs.stack-auth.com/overview
 NEXT_PUBLIC_STACK_PROJECT_ID=""
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=""
 STACK_SECRET_SERVER_KEY=""
 
-# Sentry
+# Sentry (Optional)
 SENTRY_ORG=""
 SENTRY_PROJECT=""
 
-# Resend
+# Resend (Optional)
 RESEND_API_KEY=""
 RESEND_AUDIENCE_ID=""
 
